--- a/Client/_Imports.razor
+++ b/Client/_Imports.razor
@@ -1,13 +1,14 @@
-﻿@using System.Net.Http
+@using System.Net.Http
 @using System.Net.Http.Json
+@using Microsoft.AspNetCore.Components
 @using Microsoft.AspNetCore.Components.Authorization
-@using Radzen
-@using Radzen.Blazor
+@using Microsoft.AspNetCore.Components.Forms
 @using Microsoft.AspNetCore.Components.Routing
 @using Microsoft.AspNetCore.Components.Web
 @using Microsoft.AspNetCore.Components.WebAssembly.Http
 @using Microsoft.JSInterop
+@using Radzen
+@using Radzen.Blazor
 @using SpeedwayTyperApp.Client
 @using SpeedwayTyperApp.Client.Services
 @using SpeedwayTyperApp.Shared.Models
-@using Microsoft.AspNetCore.Components.Forms
