Fix repository usings and resolve Blazor context warnings

--- a/Client/Pages/ChangePassword.razor
+++ b/Client/Pages/ChangePassword.razor
@@ -5,7 +5,7 @@
 @inject NavigationManager Navigation
 
 <AuthorizeView>
-    <Authorized>
+    <Authorized Context="_">
         <div class="change-password-box">
             <div class="change-password-container">
                 <h3>Zmień Hasło</h3>
