--- a/Client/Pages/Predictions.razor
+++ b/Client/Pages/Predictions.razor
@@ -4,7 +4,7 @@
 @inject NotificationService NotificationService
 
 <AuthorizeView>
-    <Authorized>
+    <Authorized Context="_">
         <div class="container">
             <div class="banner"></div>
             <h3>Twoje typy</h3>
