--- a/Client/Pages/Invitations.razor
+++ b/Client/Pages/Invitations.razor
@@ -4,7 +4,7 @@
 @inject NotificationService NotificationService
 
 <AuthorizeView Roles="Admin">
-    <Authorized>
+    <Authorized Context="_">
         <div class="container">
             <div class="banner"></div>
             <h3>Zarządzanie zaproszeniami</h3>
