--- a/Client/_Imports.razor
+++ b/Client/_Imports.razor
@@ -4,7 +4,6 @@
 @using System
 @using Microsoft.AspNetCore.Authorization
 @using Microsoft.AspNetCore.Components.Authorization
-@using Microsoft.AspNetCore.Authorization
 @using Radzen
 @using Radzen.Blazor
 @using Microsoft.AspNetCore.Components.Routing
@@ -12,6 +11,7 @@
 @using Microsoft.AspNetCore.Components.WebAssembly.Http
 @using Microsoft.JSInterop
 @using SpeedwayTyperApp.Client
+@using SpeedwayTyperApp.Client.Pages
 @using SpeedwayTyperApp.Client.Services
 @using SpeedwayTyperApp.Shared.Models
 @using Microsoft.AspNetCore.Components.Forms
